--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cerialize",
+  "name": "dcerialize",
   "description": "Easy serialization through ES7/Typescript annotations",
   "keywords": [
     "serialize",
@@ -7,18 +7,18 @@
     "es7",
     "annotations",
     "decoration",
+    "newtonsoft",
     "decorators"
   ],
-  "author": "Matt Weichselbaum",
+  "author": "Matt Weichselbaum & Diadème Ingenierie",
   "license": "MIT",
-  "repository": "https://github.com/weichx/cerialize",
+  "repository": "https://github.com/Diademe/cerialize",
   "version": "2.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
-  "typings": "dist/index.d.ts",
   "devDependencies": {
     "@types/jest": "^22.1.1",
     "jest": "^22.1.4",
