--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "repository": "https://github.com/Diademe/cerialize",
   "version": "2.0.0",
+  "experimentalDecorators": true,
   "main": "src/index.ts",
   "scripts": {
     "test": "jest",
