--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "repository": "https://github.com/Diademe/cerialize",
   "version": "2.0.0",
-  "main": "src/index.ts",
+  "main": "../src/index.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
