--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "MIT",
   "repository": "https://github.com/Diademe/cerialize",
   "version": "2.0.0",
-  "main": "../src/index.ts",
-  "types": "./dist/index.d.ts",
+  "main": "../dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
@@ -31,12 +32,7 @@
     "transform": {
       "^.+\\.[jt]sx?$": "ts-jest"
     },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx"
-    ]
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx"]
   },
   "dependencies": {
     "tslib": "^1.9.0"
