--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "noImplicitReturns": true,
     "noImplicitAny": true,
-    "outDir": "./dist/",
+    "declarationDir": "./dist/src",
+    "outDir": "./dist",
     "preserveConstEnums": false,
     "removeComments": true,
     "target": "es6",
@@ -16,8 +17,5 @@
     "sourceMap": true,
     "moduleResolution": "node"
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
