--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "tslint": "tslint-config-prettier-check ./tslint.json"
   },
   "devDependencies": {
     "@types/jest": "^22.1.1",
     "jest": "^22.1.4",
+    "prettier": "^1.12.1",
     "ts-jest": "^22.0.3",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.12.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.7.1"
   },
   "jest": {
@@ -32,7 +37,12 @@
     "transform": {
       "^.+\\.[jt]sx?$": "ts-jest"
     },
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ]
   },
   "dependencies": {
     "tslib": "^1.9.0"
