--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "../dist/src/index.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project src/tsconfig.json",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "tslint": "tslint-config-prettier-check ./tslint.json"
