--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "license": "MIT",
   "repository": "https://github.com/Diademe/cerialize",
   "version": "2.0.0",
-  "main": "../dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc --project src/tsconfig.json",
     "test": "jest",
