--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "author": "Matt Weichselbaum & Diadème Ingenierie",
   "license": "MIT",
-  "repository": "https://github.com/Diademe/cerialize",
+  "repository": "https://github.com/Diademe/dcerialize",
   "version": "2.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
