--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "tsc --project src/tsconfig.json",
     "test": "jest",
+    "install": "build",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "tslint": "tslint --config ./tslint.json -p src/tsconfig.json -p spec/tsconfig.json"
   },
@@ -27,8 +28,7 @@
     "jest": "^22.4.3",
     "prettier": "^1.12.1",
     "ts-jest": "^22.4.5",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "tslint": "^5.10.0"
   },
   "jest": {
     "testRegex": "/spec/.*\\.spec\\.([tj]sx?)$",
@@ -42,5 +42,7 @@
       "jsx"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^2.8.3"
+  }
 }
