--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "noEmitHelpers": false,
     "declaration": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "moduleResolution": "node"
   }
 }
