--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.3",
+    "@types/jest-diff": "^20.0.0",
     "jest": "^24.1.0",
     "prettier": "^1.16.4",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
-    "@types/jest-diff": "^20.0.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.0"
   },
   "jest": {
