--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "noEmitHelpers": false,
     "declaration": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "moduleResolution": "node"
   }
