feat: strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "declaration": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true
   }
 }
