--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "build": "tsc --project src/tsconfig.app.json",
     "test": "jest  --config spec/jest.config.js --colors",
     "coverage": "jest --config spec/jest.config.js --coverage",
-    "tslint": "tslint --config ./tslint.json -p src/tsconfig.app.json -p spec/tsconfig.spec.json"
+    "lint": "npm run lint:app && npm run lint:test",
+    "lint:app": "eslint -c .eslintrc.js --ext .ts src",
+    "lint:test": "eslint -c .eslintrc.js --ext .ts spec"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-jsdoc": "^32.3.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.0",
     "tslint": "^6.1.3",
