--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,9 +1,11 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "declaration": true,
-    "outDir": "../dist",
-    "sourceRoot": "."
-  },
-  "include": ["./**/*.ts"]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "declaration": true,
+        "outDir": "../dist",
+        "sourceRoot": "."
+    },
+    "include": [
+        "./**/*.ts"
+    ]
 }
